[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rustileo"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.8.1",
    "pip>=24.3.1",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
test = [
    "pytest>=8.3.4",
]
lint = [
    "ruff>=0.9.2",
]
